--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "lint": "prettier --config prettierrc.json --write .",
-    "start": "webpack serve --open --config webpack.dev.js",
+    "start": "webpack serve --open /dev --config webpack.dev.js",
     "test": "jest --config=jest.config.js",
     "build": "webpack --config webpack.prod.js"
   },
@@ -25,13 +25,8 @@
   "devDependencies": {
     "@types/jest": "^29.1.1",
     "@types/lodash": "^4.14.186",
-    "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.1.1",
     "prettier": "^2.7.1",
-    "sass": "^1.55.0",
-    "sass-loader": "^13.0.2",
-    "style-loader": "^3.3.1",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
