--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/WebMUD/WebMUD#readme",
   "devDependencies": {
-    "@types/jest": "^29.1.1",
+    "@types/jest": "^29.2.1",
     "@types/lodash": "^4.14.186",
     "jest": "^29.1.1",
     "prettier": "^2.7.1",
@@ -43,6 +43,7 @@
   "dependencies": {
     "ajv": "^8.11.0",
     "lodash": "^4.17.21",
-    "peerjs": "^1.4.7"
+    "peerjs": "^1.4.7",
+    "save-dev": "^0.0.1-security"
   }
 }
